perbaikan & pengerjaan tugas

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Open soal1.html",
-            "file": "d:\\SEMESTER 6\\SI WEB ISB 310\\tugas2_162023005\\tugas_week3\\soal2.html"
+            "file": "d:\\SEMESTER 6\\SI WEB ISB 310\\SI-WEB\\tugas_week4\\soal1.html"
         }
     ]
 }
